--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-typed": "^1.2.0",
     "react-visibility-sensor": "^5.1.1",
     "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
